--- a/vercel.json
+++ b/vercel.json
@@ -3,16 +3,20 @@
   "builds": [
     {
       "src": "index.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": { "includeFiles": ["views/**"] }
     }
   ],
   "routes": [
     {
       "src": "/.*",
-      "dest": "index.js"
+      "dest": "/index.js"
     }
   ],
   "env": {
-    "TELEGRAM_BOT_TOKEN": "@telegram_bot_token"
+    "bot": "@telegram_bot_token"
+  },
+  "engines": {
+    "node": ">=12.0.0"
   }
 }
