--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,6 @@
     }
   ],
   "env": {
-    "bot": "YOUR_TELEGRAM_BOT_TOKEN"
+    "bot": "6414401015:AAFbVodMkJhouOZ4jGSdF6sQEGZu0T6ZAjU"
   }
 }
